Fix crashes by moving UAS to AS Previously, using a UAS caused scroll bars to render in inputs. The fix to this then caused problems where Electron would crash when trying to render search inputs. Instead, the scrollbar styling has now been moved to an Author Stylesheet (AS) to fix this problem.

--- a/shell/userenv/webviewuas.css
+++ b/shell/userenv/webviewuas.css
@@ -6,43 +6,3 @@
     https://liveg.tech
     Licensed by the LiveG Open-Source Licence, which can be found at LICENCE.md.
 */
-
-:not(input) ::-webkit-scrollbar {
-    width: 16px;
-    height: 16px;
-}
-
-:not(input) ::-webkit-scrollbar-button {
-    width: 0px;
-    height: 0px;
-}
-
-:not(input) ::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.5);
-    border: 4px solid transparent;
-    border-radius: 8px;
-    background-clip: content-box;
-}
-
-:not(input) ::-webkit-scrollbar-thumb:active {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-:not(input) ::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-input::-webkit-textfield-decoration-container {
-    position: absolute;
-    width: 100%;
-}
-
-@media (prefers-color-scheme: dark) {
-    :not(input) ::-webkit-scrollbar-thumb {
-        background-color: rgba(255, 255, 255, 0.5);
-    }
-    
-    :not(input) ::-webkit-scrollbar-thumb:active {
-        background-color: rgba(255, 255, 255, 0.8);
-    }
-}
